nav spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -175,7 +175,7 @@ h2 {
   text-decoration: none;
   color: #000;
   text-transform: uppercase;
-  margin-left: 2vw;
+  margin-left: 25px;
 }
 
 .site-header .hamburger {
