--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -59,7 +59,7 @@
         text-decoration: none;
         color: $color-black;
         text-transform: uppercase;
-        margin-left: 2vw;
+        margin-left: 25px;
       }
     }
   }
